# ructiss

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  arm-none-eabi-rust.json  i686-unknown-linux-gnu-rust.json  kernel.ld
arch/i386/boot/: init_os.rs  ipl.asm  secondboot.asm
kernel/: Cargo.toml
kernel/arch/arm-none-eabi/: Cargo.toml  kernel.ld
kernel/arch/arm-none-eabi/asm/: crt.S
kernel/arch/arm-none-eabi/src/: lib.rs
kernel/arch/i686-unknown-linux-gnu/: Cargo.toml  kernel.ld
kernel/arch/i686-unknown-linux-gnu/asm/: ipl.asm  osfunc.asm  secondboot.asm
kernel/arch/i686-unknown-linux-gnu/src/: lib.rs
kernel/common/core/: Cargo.toml
kernel/common/core/src/: lib.rs
kernel/src/: lib.rs
