[package]
name = "ructiss"
version = "0.0.1"
authors = ["kotetuco"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
lto = true

[profile.release]
panic = "abort"
opt-level = 2
lto = true

[dependencies]
ructiss_core = { path = "common/core/" }
rlibc = "1.0.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[target.i686-unknown-linux-gnu-rust.dependencies]
arch_i686_unknown_linux_gnu = { path = "arch/i686-unknown-linux-gnu" }

[target.arm-none-eabi-rust.dependencies]
arch_arm_none_eabi = { path = "arch/arm-none-eabi" }
